<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Ui_practice">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:background="@drawable/background"
        >
        <RelativeLayout
            android:id="@+id/locationlayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/location"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_centerVertical="true"
                android:text="@string/california_usa"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:ignore="RelativeOverlap" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bell"
                android:layout_centerVertical="true"
                android:background="@drawable/buttonbg"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo2" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/search"
                android:layout_alignParentEnd="true"
                android:background="@drawable/buttonbg"
                android:layout_centerVertical="true"
                android:layout_marginEnd="80dp"
                android:contentDescription="@string/todo1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/imagelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_layout_background"
            android:layout_below="@+id/locationlayout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_loking_for_hair_style_nand_colour"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_15_off"
                android:background="@drawable/textbackground"
                android:textColor="@color/black"
                android:layout_below="@+id/text"
                android:layout_marginTop="30dp"
                android:padding="6dp"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                />
            <ImageView
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/image"
                android:contentDescription="@string/todo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/imagelayout"
            android:layout_width="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/searchgooglr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="search google"
                android:textSize="20dp"/>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_below="@id/searchgooglr"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </RelativeLayout>
        <CheckBox
            android:id="@+id/myCheckBox"
            android:layout_width="wrap_content"
            android:layout_below="@+id/imagelayout"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:text="My CheckBox"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:scaleX="1.2"
            android:scaleY="1.2" />

    </RelativeLayout>

</RelativeLayout>
